@@ -225,6 +225,7 @@ td .currency	{color:#ccc; font-size:10px; line-height:12px;}
 .type			{background-color:rgba(72,79,86,0.6); border-radius:4px; color:#CCC; font-size:11px; margin:0 auto; margin-left:-5px; padding:2px 4px;}
 .type.secondary	{background-color:#304767; color:#ddd;}
 .ref			{color:#CCC; font-family:monospace; font-size:10px; line-height:initial; margin:0 auto;}
+.ref > *		{vertical-align:baseline;}
 .ref span		{color:#fff;}
 .ref span.withdrawn					{background-color:#545e73; color:#ddd; font-size:10px;}
 .org-type		{margin-top:5px;}
