@@ -1,3 +1,9 @@
+Development Portal (2024-04-04 shi)
+==============================
+Update css for REF baseline alignment in SAVi
+Rename Project to Activity in SAVi
+
+
 Development Portal (2024-04-03 shi)
 ==============================
 Update all 'project/s' to 'activity/ies'
